# abinit

./: .codespell.ignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CITATION.cff  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  INSTALL.md  INSTALL_CentOS.md  INSTALL_EasyBuild.md  INSTALL_MacOS.md  INSTALL_MacOSX.md  INSTALL_Ubuntu.md  INSTALL_gpu.md  KNOWN_PROBLEMS  LICENCE  NEWS  PACKAGING  README  README-mkdocs.md  README.ChangeLog  README.MacOSX  README.md  README.xlf  README_MacOSX.md  README_Ubuntu.md  README_gpu.md  RELNOTES  THANKS  TODO  TODO.buildsys  abinit.pc.in  abisrc.py  abisrc_requirements.txt  autogen.sh  (+28 more)
shared/libpaw/: .gitignore  AUTHORS  README  autogen.sh  configure.ac  quickcheck.sh  wipeout.sh
src/: .gitignore  02_clib  12_hide_mpi  14_hidewrite  16_hideleave  18_timing  21_hashfuncs  27_toolbox_oop  29_kpoints  32_util  41_xc_lowlevel  CMakeLists.txt  README  README.md  abisrc.py  change.sh  log-CP  m.bak
src/01_gsl_ext/: _01_gsl_ext_  abinit.src  gsl_f90_sf_bessel_j0.c  gsl_f90_sf_bessel_jl.c  gsl_f90_sf_gamma.c
src/01_linalg_ext/: _01_linalg_ext_  abinit.src  m_linalg_interfaces.F90
src/01_macroavnew_ext/: _01_macroavnew_ext_  abinit.src  iorho.F90  m_macroave.F90  numeric.F90  surpla.F90  thetaft.F90  volcel.F90
src/01_triqs_ext/: _01_triqs_ext_  abinit.amf  abinit.src  interface_triqs_ctqmc.F90  triqs_cthyb_qmc.cpp  triqs_cthyb_qmc.hpp
src/02_clib/: _02_clib_  abinit.amf  abinit.src  align.c  calling_levmar.c  cclock.c  etime.c  fsi_posix.c  gnu_tools.c  intrinsics.c  m_clib.F90  mallinfo.c  md5.c  md5.h  progress_bar.c  xexit.c  xmalloc.c  xmalloc.h
src/10_defs/: _10_defs_  abinit.src  defs_aimfields.F90  defs_aimprom.F90  defs_basis.F90  defs_datatypes.F90  defs_fftdata.F90  defs_parameters.F90  defs_suscep.F90  defs_time.F90  defs_wannier90.F90
src/10_dumpinfo/: _10_dumpinfo_  abinit.amf  abinit.src  m_build_info.F90  m_build_info.F90.in  m_cppopts_dumper.F90  m_optim_dumper.F90
src/11_memory_mpi/: _11_memory_mpi_  abinit.src  m_profiling_abi.F90
src/11_qespresso_ext/: _11_qespresso_ext_  abinit.src  flib_pwscf.F90  functionals_pwscf.F90  m_pseudo_pwscf.F90  m_read_upf_pwscf.F90  read_upf_pwscf.F90
src/12_hide_mpi/: _12_hide_mpi_  abinit.amf  abinit.src  m_xmpi.F90  m_xomp.F90  xmpi_allgather.finc  xmpi_allgatherv.finc  xmpi_alltoall.finc  xmpi_alltoallv.finc  xmpi_bcast.finc  xmpi_exch.finc  xmpi_gather.finc  xmpi_gatherv.finc  xmpi_ialltoall.finc  xmpi_ialltoallv.finc  xmpi_ibcast.finc  xmpi_irecv.finc  xmpi_isend.finc  xmpi_isum.finc  xmpi_land_lor.finc  xmpi_max.finc  xmpi_min.finc  xmpi_recv.finc  xmpi_scatterv.finc  xmpi_send.finc  xmpi_sum.finc  xmpi_sum_master.finc
src/14_hidewrite/: _14_hidewrite_  abinit.src  herald.F90  m_abicore.F90  m_fstrings.F90  m_io_tools.F90  m_specialmsg.F90  wrtout.F90
src/15_gpu_toolbox/: _15_gpu_toolbox_  abinit.src  dev_spec.cu  gpu_linalg.cu  m_gpu_detect.F90  m_initcuda.F90  timing_cuda.cu
src/16_hideleave/: _16_hideleave_  abinit.src  leave_new.F90  m_errors.F90  m_xieee.F90
src/17_gpu_toolbox/: _17_gpu_toolbox_  abinit.src  dev_spec.cu  gpu_linalg.cu  m_gpu_detect.F90  m_gpu_toolbox.F90  m_initcuda.F90  timing_cuda.cu
src/17_libtetra_ext/: _17_libtetra_ext_  abinit.src  libtetra.h  libtetrabz.F90  libtetrabz_common.F90  libtetrabz_dbldelta_mod.F90  libtetrabz_dblstep_mod.F90  libtetrabz_dos_mod.F90  libtetrabz_fermigr_mod.F90  libtetrabz_occ_mod.F90  libtetrabz_polcmplx_mod.F90  libtetrabz_polstat_mod.F90  m_htetrahedron.F90  m_kptrank.F90  m_simtet.F90  m_tetrahedron.F90
src/17_yaml_out/: c_pair_list.c  m_pair_list.F90  m_stream_string.F90  m_type_pair_list.F90  m_yaml_out.F90
src/18_timing/: _18_timing_  abinit.src  m_time.F90  m_xpapi.F90  timab.F90  time_accu.F90  timein.F90
src/20_datashare/: _20_datashare_  abinit.src  m_vdw_dftd3_data.F90  vdw_dftd3_data.F90
src/21_hashfuncs/: _21_hashfuncs_  abinit.src  m_hash_md5.F90  test_md5_sum_from_file.F90  test_md5_sum_from_string.F90
src/27_linalg/: _27_linalg_  abinit.src
src/27_toolbox_oop/: _27_toolbox_oop_  abinit.src  m_copy.F90  m_geometry.F90  m_iterators.F90  m_mpiotk.F90  m_nctk.F90
src/28_kpoints/: _28_kpoints_
src/28_numeric_noabirule/: _28_numeric_noabirule_  abi_gpu_linalg.f90  abi_xcopy.f90  abi_xgemm.f90  abi_xheev.f90  abi_xhegv.f90  abi_xhpev.f90  abi_xhpgv.f90  abi_xorthonormalize.f90  abi_xpotrf.f90  abi_xtrsm.f90  abinit.amf  abinit.src  coeffs_gausslegint.F90  cspint.F90  dzgedi.F90  dzgefa.F90  farray_ncwrite.finc  gamma_function.F90  genarray.py  interp.F90  intrpl.F90  j0y0.F90  j1y1.F90  jacobi.F90  k0.F90  k1.F90  lebedev_laikov.F90  lib_four.F90  ludcmp.F90  m_abi_linalg.F90  m_abilasi.F90  m_array.F90  m_bessel.F90  m_blas.F90  m_bspline.F90  m_cgtools.F90  m_cplxtools.F90  m_elpa.F90  m_gaussian_quadrature.F90  (+21 more)
src/29_kpoints/: _29_kpoints_  abinit.src  m_hashtable.F90  m_hkptrank.F90  m_htetrahedron.F90  m_octree.F90  m_symkpt.F90  symkpt.F90
src/29_linalg/: _29_linalg_  abinit.src
src/29_xgTools/: abinit.src  m_xg.F90  m_xgScalapack.F90
src/30_diago/: abinit.src  m_lobpcg2.F90
src/32_util/: _32_util_  abinit.src  acrossb.F90  appdig.F90  besjm.F90  blow_pawuj.F90  clp.F90  create_mlms2jmj.F90  create_slm2ylm.F90  ctrap.F90  ddb_chkname.F90  dummy_subroutines.F90  fappnd.F90  findmin.F90  hermit.F90  inupper.F90  isfile.F90  kramerskronig.F90  littlegroup_q.F90  m_angles.F90  m_atomdata.F90  m_berrytk.F90  m_dummy.F90  m_exp_mat.F90  m_gwls_utility.F90  m_integrals.F90  m_matrix.F90  m_optic_tools.F90  m_pptools.F90  m_smatrix.F90  m_special_funcs.F90  m_symtk.F90  m_wfutils.F90  mati3det.F90  mati3inv.F90  matr3eigval.F90  matr3inv.F90  matrginv.F90  mknormpath.F90  nderiv.F90  (+12 more)
src/41_geometry/: CMakeLists.txt  _41_geometry_  ab7_symmetry.fortran.h  abinit.amf  abinit.src  bldgrp.F90  bonds_lgth_angles.F90  chiscwrt.F90  chkdilatmx.F90  chkgrp.F90  chkorthsy.F90  chkprimit.F90  chkrprimd.F90  dbeta.F90  dist2.F90  fcart2fred.F90  fillcell.F90  fred2fcart.F90  gensymshub.F90  gensymshub4.F90  gensymspgr.F90  getptgroupma.F90  (+63 more)
(+17175 files in other folders)
